fixed weird spacing for button

--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,9 +1,10 @@
-.filters {
-    background-color: white;
+.container .filters {
+    background-color: #FFFFFF;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    position: relative;
 }
 
 .filters button {
@@ -14,5 +15,14 @@
     width: 20%;
     border: none;
     border-radius: 4px;
+    position: absolute;
     right: 30px; top: 11px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.filters button:hover {
+    opacity: 0.9;
 }
